<resources>
    <string name="app_name">Intelli Business</string>
    <string name="activity_shopcart_name">Carrito</string>

    <string name="senderID">608195282407</string>
    <string name="serverAPIKey">AIzaSyD6FNPDmgIcHDAAW42NfnUP2pOM7S0yiyU</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="splash_activity_msjok">Iniciando Main o Loggin</string>
    <string name="splash_activity_msjcancel">Splash cancelado, saliendo del app</string>

    <string name="activity_login_etUserName">Nombre de usuario</string>
    <string name="activity_login_etTittle">Inicio de sesión</string>
    <string name="activity_login_btnSignUp">Login</string>
    <string name="activity_login_tvCreateAccount">Crear nueva cuenta</string>
    <string name="activity_login_msjError">Datos incorrectos</string>

    <string name="dialog_loading_tvLoading">Procesando datos...</string>
    <string name="dialog_loading_msjRegister">Registrando usuarios, por favor espere...</string>

    <string name="login_activity_msjLogOk">Logeado correctamente</string>
    <string name="login_activity_msjLogNO">Usuario o contraseña equivocado</string>
    <string name="login_activity_msjLogCancel">Login cancelado</string>

    <string name="dialog_register_user_tvUserName">Nombre de usuario</string>
    <string name="dialog_register_user_tvName">Nombres</string>
    <string name="dialog_register_user_tvCI">CI</string>
    <string name="dialog_register_user_tvLastName">Apellidos</string>
    <string name="dialog_register_user_tvEmail">Email</string>
    <string name="dialog_register_user_tvTelephone">Teléfono</string>
    <string name="dialog_register_user_tvAddress">Dirección</string>
    <string name="dialog_register_user_tvPassword">Password</string>
    <string name="dialog_register_user_tvRepeatPassword">Repetir password</string>
    <string name="dialog_register_user_btnDialogCancel">Cancel</string>
    <string name="dialog_register_user_btnDialogok">Registrar</string>
    <string name="dialog_register_user_tvTittleDialog">Register un nuevo usuario</string>
    <string name="dialog_register_user_msjError">Error al registrar usuario</string>
    <string name="dialog_register_user_msjIncorrect">Revise los campos de registro</string>

    <string name="view_item_product_tvNameProduct">Product name</string>
    <string name="view_item_product_tvPriceProduct">0.00$</string>
    <string name="view_item_product_tvPriceProduct_offer">0.00$</string>

    <string name="main_drawer_Init">Inicio</string>
    <string name="main_drawer_Product">Productos</string>
    <string name="main_drawer_Tittle">Mi catálogo</string>
    <string name="main_drawer_Category">Categorias</string>
    <string name="main_drawer_info">Acerca de...</string>
    <string name="main_drawer_config">Configuracion</string>
    <string name="main_drawer_Enterprise">Empresas</string>
    <string name="main_drawer_logout">Cerrar sesion</string>


    <string name="activity_detail_product_tvProductTittle">Este es un nombre de producto, que debe ser muy largo y por lo menos soportar este texto</string>
    <string name="activity_detail_product_tittle"> Detalle de producto </string>
    <string name="activity_detail_image_noaval"> Detalle de producto </string>
    <string name="activity_detail_product_tvProductPrice">2000.00 BS</string>
    <string name="activity_detail_product_tvOffer"> Oferta:</string>
    <string name="activity_detail_product_btnBuy"> ¡Cómpralo ya! </string>
    <string name="activity_detail_product_btnAddCart"> Añadir al carrito </string>
    <string name="activity_detail_product_tvInfoProduct"> Información de este producto: </string>
    <string name="activity_detail_product_tvState"> Estado: </string>
    <string name="activity_detail_product_tvQuantity"> Cantidad: </string>
    <string name="activity_detail_product_tvCategory"> Categoría: </string>
    <string name="activity_detail_product_tvCorp"> Información del vendedor: </string>
    <string name="activity_detail_product_msjAddShop"> Se añadió el producto al carrito completamente. </string>
    <string name="activity_detail_product_msjErrorAddShop"> Error al añadir el producto al carrito. </string>
    <string name="activity_detail_product_msjOkBuy"> Compra realizada correctamente </string>
    <string name="activity_detail_product_msjErrorBuy"> Error al realizar la compra. Intente más tarde. </string>
    <string name="activity_detail_product_msjErrorDownloadProd"> Error al descargar producto. Intente más tarde. </string>
    <string name="activity_detail_product_tvQuatity"> Cantidad: </string>


    <string name="activity_inbox_tittle"> Notificaciones </string>
    <string name="activity_product_tittle"> Búsqueda de producto. </string>
    <string name="activity_MsjErrorLoading"> Error en la conexión, intente más tarde. </string>
    <string name="activity_shopcart_tittle"> Carrito de compras </string>

    <!-- Strings ACRA -->
    <string name="crash_toast_text">¡Lo sentimos! Ocurrio un problema con Intelli Business. Por favor reportalo a los desarrolladores para que lo solucionen</string>
    <string name="crash_dialog_title">Intelli Business tuvo un problema</string>
    <string name="crash_dialog_text">Un error inesperado ocurrio forzando a la aplicación a detenerse. Por Favor ayudanos enviando los datos del error pulsando en Aceptar.</string>
    <string name="crash_dialog_comment_prompt">Agrega tus comentarios acerca del problema :v </string>
    <string name="crash_dialog_ok_toast">Gracias por ayudarnos!</string>
    <string name="crash_user_email_label">Si deseas ingresa tu correo para contactarte:</string>


    <string name="notification_dialog"> Esta es una forma de hacer marketing mediante la plataforma comercial de IntelliBusiness </string>

    <string name="information_dialog"> Aplicación desarrollada por IntelliSoft </string>
    <string name="information_dialog_more">Visita nuestra página web</string>

    <string name="information_Tittle"> Información </string>

</resources>
