<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main_drawer_Init" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:visible="false"
            android:title="@string/main_drawer_Product" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/main_drawer_info" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/main_drawer_config" />
    </group>

    <item android:title="@string/main_drawer_Tittle">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:visible="false"
                android:title="@string/main_drawer_Category" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_share"
                android:visible="false"
                android:title="@string/main_drawer_Enterprise" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/main_drawer_logout" />
        </menu>
    </item>

</menu>
