<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="@color/blue_berry"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout2"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/information_Tittle"
                style="@style/TextViews_activityTittle"
                android:layout_gravity="center"
                android:id="@+id/tvTittleDialog"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivCloseDialog"
                android:src="@drawable/ic_cancel_white"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/information_dialog"
            android:padding="5dp"
            android:maxLines="2"
            android:gravity="center"
            android:id="@+id/tvMessage"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:id="@+id/ivNotifi"
            android:layout_below="@+id/tvMessage"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_intellisoftlogo"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/information_dialog_more"
            android:id="@+id/tvEnlace"
            android:gravity="center"
            android:layout_margin="15dp"
            android:layout_below="@+id/ivNotifi"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>