<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_container_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="900dp"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal"
        android:fillViewport="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="840dp"
            android:id="@+id/rlPrincipal"
            android:layout_margin="10dp"
            android:background="@drawable/border_image"
            >

                    <com.daimajia.slider.library.SliderLayout
                        android:id="@+id/sldImageProduct"
                        android:layout_width="match_parent"
                        custom:pager_animation="Accordion"
                        custom:auto_cycle="true"
                        custom:indicator_visibility="visible"
                        custom:pager_animation_span="1100"
                        android:layout_height="200dp"/>

                    <com.daimajia.slider.library.Indicators.PagerIndicator
                        android:id="@+id/custom_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        custom:selected_color="#0095BF"
                        custom:unselected_color="#55333333"
                        custom:selected_drawable="@drawable/bird"
                        custom:shape="oval"
                        custom:selected_padding_left="5dp"
                        custom:selected_padding_right="5dp"
                        custom:unselected_padding_left="5dp"
                        custom:unselected_padding_right="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        custom:selected_width="6dp"
                        custom:selected_height="6dp"
                        custom:unselected_width="6dp"
                        custom:unselected_height="6dp"
                        android:layout_marginBottom="20dp"
                        />

                    <com.daimajia.slider.library.Indicators.PagerIndicator
                        android:id="@+id/custom_indicator2"
                        style="@style/AndroidImageSlider_Corner_Oval_Orange"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="20dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/activity_detail_product_tvProductTittle"
                        android:gravity="center"
                        android:id="@+id/tvProductTittle"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_below="@+id/sldImageProduct"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/activity_detail_product_tvProductPrice"
                        android:id="@+id/tvProductPrice"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="10dp"
                        android:textSize="32dp"
                        android:layout_below="@+id/tvProductTittle"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/activity_detail_product_tvOffer"
                        android:id="@+id/tvOffer"
                        android:layout_marginLeft="15dp"
                        android:visibility="gone"
                        android:textSize="20dp"
                        android:layout_alignBottom="@+id/tvProductPrice"
                        android:layout_toRightOf="@+id/custom_indicator"
                        android:layout_toEndOf="@+id/custom_indicator" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/activity_detail_product_tvOffer"
                        android:id="@+id/tvOfferNum"
                        android:layout_marginLeft="5dp"
                        android:visibility="gone"
                        android:textSize="20dp"
                        android:layout_alignBottom="@+id/tvOffer"
                        android:layout_toRightOf="@+id/tvOffer"
                        android:layout_toEndOf="@+id/tvOffer" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_below="@+id/tvProductPrice"
                android:orientation="vertical"
                android:background="@drawable/border_image"
                android:id="@+id/linearLayout">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/activity_detail_product_btnBuy"
                    style="@style/Buttons_dialog"
                    android:id="@+id/btnBuy"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="clicBuyProduct" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:text="@string/activity_detail_product_btnAddCart"
                    style="@style/Buttons_dialog"
                    android:layout_marginTop="1dp"
                    android:id="@+id/btnAddCart"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:onClick="clicAddShopCart" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_below="@+id/linearLayout"
                android:background="@drawable/border_image"
                android:layout_centerHorizontal="true"
                android:id="@+id/relativeLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/activity_detail_product_tvState"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/tvState"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" />

                     </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tvInfoProduct"
                android:layout_marginTop="14dp"
                android:textSize="16dp"
                android:text="@string/activity_detail_product_tvInfoProduct"
                android:layout_below="@+id/linearLayout"
                android:layout_alignLeft="@+id/relativeLayout"
                android:layout_alignStart="@+id/relativeLayout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tvCorp"
                android:layout_marginTop="21dp"
                android:textSize="16dp"
                android:text="@string/activity_detail_product_tvCorp"
                android:layout_below="@+id/relativeLayout"
                android:layout_alignLeft="@+id/relativeLayout"
                android:layout_alignStart="@+id/relativeLayout" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/tvCorp"
                android:background="@drawable/border_image"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/ivCompanyDet"
                    android:background="@drawable/border_image"
                    android:src="@drawable/ic_account_circle_black"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Large Text"
                    android:id="@+id/tvCompanyDet"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ivCompanyDet"
                    android:layout_toEndOf="@+id/ivCompanyDet" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activity_detail_product_tvQuatity"
                android:paddingTop="8dp"
                android:id="@+id/tvQuatity"
                android:layout_alignTop="@+id/tvProductPrice"
                android:layout_toEndOf="@+id/tvCorp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etQuantity"
                android:gravity="center"
                android:text="1"
                android:layout_alignBottom="@+id/tvProductPrice"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/tvQuatity" />

        </RelativeLayout>

    </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>




</LinearLayout>